--- a/packages/mobile/locales/en-US/exchangeFlow9.json
+++ b/packages/mobile/locales/en-US/exchangeFlow9.json
@@ -37,5 +37,5 @@
   "errorRefreshingRate": "Could not refresh exchange rate",
   "exchangeRateChange": "Exchange rate has changed, please retry",
   "feeExchangeEducation": "When making exchanges, a small additional fee goes towards maintaining the stable value of Celo Dollar. To learn more about Celo fees, visit the FAQ.",
-  "goldPrice": "Gold Price"
+  "goldPrice": "Celo Gold Price"
 }
