--- a/packages/mobile/locales/en-US/exchangeFlow9.json
+++ b/packages/mobile/locales/en-US/exchangeFlow9.json
@@ -3,8 +3,6 @@
   "equalToAmount": "Equal to <1></1>",
   "whatIsGold": "Gold is where you can choose to store {{CeloDollars}} you have",
   "manageCelo": "Manage {{CeloDollars}}",
-  "activity": "Activity",
-  "goldActivity": "Gold Activity",
   "exchangeRate": "Exchange Rate",
   "exchangeRateValue": "<0></0> : 1 {{takerTokenCode}}",
   "history": "History",
@@ -37,5 +35,6 @@
   "errorRefreshingRate": "Could not refresh exchange rate",
   "exchangeRateChange": "Exchange rate has changed, please retry",
   "feeExchangeEducation": "When making exchanges, a small additional fee goes towards maintaining the stable value of Celo Dollar. To learn more about Celo fees, visit the FAQ.",
-  "goldPrice": "Celo Gold Price"
+  "goldPrice": "Celo Gold Price",
+  "yourGoldBalance": "Your Gold Balance"
 }
