--- a/packages/mobile/locales/en-US/walletFlow5.json
+++ b/packages/mobile/locales/en-US/walletFlow5.json
@@ -16,8 +16,7 @@
   "review": "Review",
   "thanksForVerifying": "Thanks for verifying",
   "earnCeloRewards": "Earn Celo Rewards for verifying others",
-  "earnCeloGold":
-    "Earn Celo Gold by allowing the network to send verification texts from your phone",
+  "earnCeloGold": "Earn Celo Gold by allowing the network to send verification texts from your phone",
   "startEarning": "Start Earning",
   "learnMore": "Learn More",
   "goldIsWhereYouSave": "Gold is where you can save {{CeloDollars}} you have",
@@ -34,8 +33,7 @@
   "verificationFee": "Verification Fee",
   "networkFee": "Network Fee",
   "networkFeeExplanation": {
-    "0":
-      "Each week, a very small fee (less than 0.01%) of every user's Celo Dollar Balance is used to keep the Celo Dollar's value stable. To learn more about Celo fees, visit the ",
+    "0": "Each week, a very small fee (less than 0.01%) of every user's Celo Dollar Balance is used to keep the Celo Dollar's value stable. To learn more about Celo fees, visit the ",
     "1": "FAQ"
   },
   "confirmingPayment": "Confirming…",
@@ -53,12 +51,10 @@
   "balanceNeedUpdating": "Balance needs updating",
   "refreshBalances": "Refresh Balances",
   "escrowedPaymentReminder": "Pending Invitations",
-  "escrowedPaymentReminderSms":
-    "A friendly reminder that you haven't yet redeemed your Celo Dollars!",
+  "escrowedPaymentReminderSms": "A friendly reminder that you haven't yet redeemed your Celo Dollars!",
   "testnetAlert": {
     "0": "{{testnet}}",
-    "1":
-      "A friendly reminder you're using the {{testnet}} network build - the balances are not real"
+    "1": "A friendly reminder you're using the {{testnet}} network build - the balances are not real"
   },
   "dismiss": "Dismiss",
   "dollarBalance": "<0></0> $t(global:celoDollars)",
@@ -79,5 +75,7 @@
   "feedItemReceivedTitle_missingSenderDetails": "Payment Received",
   "feedItemReceivedTitle_escrowRecieved": "Escrow Payment Received",
   "feedItemSentTitle_missingReceiverDetails": "Payment Sent",
-  "feedItemSentTitle_escrowSent": "Escrow Payment Sent"
+  "feedItemSentTitle_escrowSent": "Escrow Payment Sent",
+  "feedItemGoldSold": "Sold",
+  "feedItemGoldPurchased": "Purchased"
 }
